--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,9 +50,9 @@ VerticalDeviationFromGroundCompensation=0.000000
 bForceRebuildOnLoad=True
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
@@ -62,6 +62,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
+r.AntiAliasingMethod=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
