--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,6 +63,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.Lumen.Reflections.HardwareRayTracing.Translucent.Refraction.EnableForProject=False
 r.AntiAliasingMethod=1
+r.DefaultFeature.AutoExposure=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
